--- a/src/apps/docs/styles/index.scss
+++ b/src/apps/docs/styles/index.scss
@@ -232,7 +232,7 @@
 
 /* Light dark block */
 .ptr-docs-light-dark-block {
-	margin: m(1) 0;
+	margin: m(1) 0 m(2);
 }
 .ptr-docs-light-dark-block > div {
 	padding: m(1);
