--- a/src/components/common/charts/style.scss
+++ b/src/components/common/charts/style.scss
@@ -11,20 +11,27 @@
 }
 
 .ptr-chart-container {
+	width: 100%;
+	overflow: hidden;
+	max-width: 100%;
+}
+
+.ptr-chart-container > div {
 	position: relative;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	height: 100%;
+	//height: 100%;
+	//min-height: 100%;
 	align-items: center;
 	justify-content: center;
 }
 
-.ptr-chart-container.legend-top {
+.ptr-chart-container.legend-top > div {
 	flex-direction: column-reverse;
 }
 
-.ptr-chart-container.legend-right {
+.ptr-chart-container.legend-right > div {
 	flex-direction: row;
 }
 
