--- a/src/apps/docs/styles/index.scss
+++ b/src/apps/docs/styles/index.scss
@@ -234,6 +234,7 @@
 /* Light dark block */
 .ptr-docs-light-dark-block {
 	margin: m(1) 0 m(2);
+	overflow-x: hidden;
 }
 .ptr-docs-light-dark-block > div {
 	padding: m(1);
@@ -242,19 +243,18 @@
 .ptr-docs-light-dark-block .ptr-light,
 .ptr-docs-light-dark-block .ptr-dark {
 	background: var(--base0);
-	width: 100%;
 }
 
 /* Component props table */
 .ptr-docs-props-table-container {
 	width: 100%;
 	overflow-y: auto;
+	margin: m(1/3) 0;
 }
 
 .ptr-docs-props-table {
 	background: var(--base10);
 	padding: .35rem;
-	margin: m(1/3) 0;
 	max-width: 80rem;
 }
 
@@ -343,8 +343,11 @@
 .ptr-docs-visualizations-intro-example {
 	margin-bottom: m(1);
 	display: flex;
+	flex-wrap: wrap;
 }
 
-.ptr-docs-visualizations-intro-example > div {
-	margin-right: m(4/3);
+.ptr-docs-visualizations-intro-example .ptr-chart-container {
+	width: auto;
+	min-width: 15rem;
+	margin: 0 m(2/3) m(2/3) 0;
 }
