--- a/src/components/common/atoms/Button/style.scss
+++ b/src/components/common/atoms/Button/style.scss
@@ -22,7 +22,7 @@
 
 /* General */
 .ptr-button {
-  background: var(--base30);
+  background: var(--base25);
   color: var(--base100);
   //border: 1px solid rgba(0,0,0,.02); // TODO why?
   border-radius: .2rem;
@@ -491,4 +491,27 @@
 }
 .ptr-button-menu.right {
   left: 0;
+}
+
+
+/* === Buttons ======================================= */
+
+.ptr-buttons .ptr-button:not(:first-child) {
+	margin-left: m(1/3);
+}
+.ptr-buttons.vertical .ptr-button:not(:first-child) { /* todo */
+	margin-top: m(1/3);
+}
+
+/* === Button group ======================================= */
+
+/* todo */
+
+.ptr-button-group .ptr-button:not(:last-child) {
+	border-bottom-right-radius: 0;
+	border-top-right-radius: 0;
+}
+.ptr-button-group .ptr-button:not(:first-child) {
+	border-bottom-left-radius: 0;
+	border-top-left-radius: 0;
 }
