--- a/src/components/common/atoms/Button/style.scss
+++ b/src/components/common/atoms/Button/style.scss
@@ -32,6 +32,7 @@
   outline: none;
   padding: 0 .35rem;
   position: relative;
+  vertical-align: top;
 
   transition:
           background .3s ease-in-out,
