--- a/src/components/common/atoms/Button/style.scss
+++ b/src/components/common/atoms/Button/style.scss
@@ -505,7 +505,8 @@
 
 /* === Buttons ======================================= */
 
-.ptr-buttons .ptr-button:not(:first-child) {
+.ptr-buttons .ptr-button:not(:first-child),
+.ptr-buttons .ptr-button-group:not(:first-child) {
 	margin-left: m(1/3);
 }
 .ptr-buttons.vertical .ptr-button:not(:first-child) { /* todo */
@@ -515,6 +516,14 @@
 /* === Button group ======================================= */
 
 /* todo */
+.ptr-button-group {
+	display: inline-block;
+}
+
+.ptr-button-group .ptr-button,
+.ptr-buttons .ptr-button-group .ptr-button {
+	margin: 0;
+}
 
 .ptr-button-group .ptr-button:not(:last-child) {
 	border-bottom-right-radius: 0;
