Aster chart - legend should fill whole container width

--- a/src/components/common/charts/style.scss
+++ b/src/components/common/charts/style.scss
@@ -14,9 +14,15 @@
 	width: 100%;
 	overflow: hidden;
 	max-width: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
-.ptr-chart-container > div {
+.ptr-chart-container.centered {
+	align-items: center;
+}
+
+.ptr-chart-container > div:not(.ptr-chart-legend) {
 	position: relative;
 	display: flex;
 	flex-direction: column;
