--- a/src/components/common/atoms/Button/style.scss
+++ b/src/components/common/atoms/Button/style.scss
@@ -510,7 +510,9 @@
 
 
 /* === Buttons ======================================= */
-
+.ptr-buttons .ptr-button {
+	margin-bottom: m(1/3);
+}
 .ptr-buttons .ptr-button:not(:first-child),
 .ptr-buttons .ptr-button-group:not(:first-child) {
 	margin-left: m(1/3);
