Update timeline component

--- a/src/components/common/timeline/style.css
+++ b/src/components/common/timeline/style.css
@@ -18,6 +18,7 @@
     /* background: rgba(197, 197, 197, 0.38); */
     background:rgba(126, 125, 125, 0.13);
     transform: translate3d(0,0,0);
+    user-select: none;
 }
 
 g.ptr-timeline-year,
